--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
             - '3306:3306'
     app:
         build: 
-            context: ..
-            dockerfile: docker/Dockerfile
+            context: .
+            dockerfile: Dockerfile
         container_name: express-app
         ports:
             - '3000:3000'
